--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "homepage": "https://github.com/devongovett/linebreaker",
   "dependencies": {
-    "unicode-trie": "^0.1.1"
+    "unicode-trie": "^0.2.0"
   },
   "devDependencies": {
     "coffee-script": "^1.7.1",
@@ -29,5 +29,10 @@
     "postpublish": "rm -rf src/*.js",
     "test": "node_modules/mocha/bin/mocha"
   },
-  "main": "src/linebreaker"
+  "main": "src/linebreaker",
+  "browserify": {
+    "transform": [
+      "brfs"
+    ]
+  }
 }
