--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/devongovett/linebreaker",
   "dependencies": {
     "base64-js": "0.0.8",
+    "brfs": "^1.3.0",
     "unicode-trie": "^0.3.0"
   },
   "devDependencies": {
