--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "devDependencies": {
     "coffee-script": "^1.7.1",
     "mocha": "*",
-    "rollup": "^0.41.6"
+    "rollup": "^0.41.6",
+    "rollup-plugin-coffee-script": "^1.1.0"
   },
   "scripts": {
     "prepublish": "rollup -c",
