--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "coffee-script": "^1.7.1",
     "mocha": "*",
     "rollup": "^0.41.6",
-    "rollup-plugin-coffee-script": "^1.1.0"
+    "rollup-plugin-coffee-script": "^1.1.0",
+    "rollup-plugin-node-resolve": "^3.0.0"
   },
   "scripts": {
     "prepublish": "rollup -c",
