--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "unicode-trie": "^0.3.0"
   },
   "devDependencies": {
+    "brfs-babel": "^1.0.0",
     "coffee-script": "^1.7.1",
     "mocha": "*",
     "rollup": "^0.41.6",
+    "rollup-plugin-browserify-transform": "^0.1.0",
     "rollup-plugin-coffee-script": "^1.1.0",
     "rollup-plugin-commonjs": "^8.0.2",
     "rollup-plugin-node-resolve": "^3.0.0"
