Change prepublish npm script to prepublishOnly
Prevents script running on npm install

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "scripts": {
     "build:es": "rollup -c build_tools/es.rollup.config.js",
     "build:umd": "rollup -c build_tools/umd.rollup.config.js",
-    "prepublish": "npm run build:es && npm run build:umd",
+    "prepublishOnly": "npm run build:es && npm run build:umd",
     "postpublish": "rm -rf dist/",
     "test": "node_modules/mocha/bin/mocha"
   },
