--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
   "homepage": "https://github.com/devongovett/linebreaker",
   "dependencies": {
     "base64-js": "0.0.8",
-    "brfs": "^1.3.0",
     "unicode-trie": "^0.3.0"
   },
   "devDependencies": {
@@ -41,10 +40,5 @@
     "test": "node_modules/mocha/bin/mocha"
   },
   "main": "dist/linebreak.umd.min.js",
-  "module": "dist/linebreak.es.min.js",
-  "browserify": {
-    "transform": [
-      "brfs"
-    ]
-  }
+  "module": "dist/linebreak.es.min.js"
 }
