--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "scripts": {
     "build": "node build_tools/build.js",
+    "generate-data": "coffee -c dev_tools/generate_data.coffee src/classes.coffee && node dev_tools/generate_data.js && rm dev_tools/generate_data.js src/classes.js",
     "prepublishOnly": "npm run build",
     "postpublish": "rm -rf dist/",
     "test": "mocha"
