--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "linebreak",
-  "version": "0.3.0",
-  "description": "An implementation of the Unicode Line Breaking Algorithm (UAX #14)",
+  "version": "0.4.0",
+  "description": "A browser-friendly implementation of the Unicode Line Breaking Algorithm (UAX #14)",
   "repository": {
     "type": "git",
     "url": "https://github.com/devongovett/linebreaker.git"
@@ -19,22 +19,26 @@
   "homepage": "https://github.com/devongovett/linebreaker",
   "dependencies": {
     "base64-js": "0.0.8",
-    "brfs": "^1.3.0",
     "unicode-trie": "^0.3.0"
   },
   "devDependencies": {
+    "brfs-babel": "^1.0.0",
     "coffee-script": "^1.7.1",
-    "mocha": "*"
+    "del": "^2.2.2",
+    "mocha": "*",
+    "rollup": "^0.41.6",
+    "rollup-plugin-babili": "^3.0.0",
+    "rollup-plugin-browserify-transform": "^0.1.0",
+    "rollup-plugin-coffee-script": "^1.1.0",
+    "rollup-plugin-commonjs": "^8.0.2",
+    "rollup-plugin-node-resolve": "^3.0.0"
   },
   "scripts": {
-    "prepublish": "coffee -c src/",
-    "postpublish": "rm -rf src/*.js",
+    "build": "node tools/rollup_build_script.js",
+    "prepublishOnly": "npm run build",
+    "postpublish": "rm -rf dist/",
     "test": "node_modules/mocha/bin/mocha"
   },
-  "main": "src/linebreaker",
-  "browserify": {
-    "transform": [
-      "brfs"
-    ]
-  }
+  "main": "dist/linebreak.umd.min.js",
+  "module": "dist/linebreak.es.min.js"
 }
