--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "coffee-script": "^1.7.1",
     "del": "^2.2.2",
     "mocha": "*",
+    "request": "^2.81.0",
     "rollup": "^0.41.6",
     "rollup-plugin-babili": "^3.0.0",
     "rollup-plugin-browserify-transform": "^0.1.0",
@@ -35,6 +36,7 @@
   },
   "scripts": {
     "build": "node tools/rollup_build_script.js",
+    "generate-data": "coffee -c tools/generate_data.coffee src/classes.coffee && node tools/generate_data.js && rm tools/generate_data.js src/classes.js",
     "prepublishOnly": "npm run build",
     "postpublish": "rm -rf dist/",
     "test": "node_modules/mocha/bin/mocha"
