--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
   "homepage": "https://github.com/devongovett/linebreaker",
   "dependencies": {
     "base64-js": "1.3.1",
-    "brfs": "^2.0.2",
     "unicode-trie": "^1.0.0"
   },
   "devDependencies": {
     "mocha": "^6.0.2",
+    "quote-stream": "^1.0.2",
     "request": "^2.88.0",
     "static-module": "^3.0.3"
   },
