--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "linebreak",
   "version": "1.0.2",
   "description": "An implementation of the Unicode Line Breaking Algorithm (UAX #14)",
+  "source": "src/linebreaker.js",
+  "main": "dist/main.js",
+  "module": "dist/module.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/devongovett/linebreaker.git"
@@ -19,20 +22,15 @@
   "homepage": "https://github.com/devongovett/linebreaker",
   "dependencies": {
     "base64-js": "0.0.8",
-    "brfs": "^2.0.2",
     "unicode-trie": "^1.0.0"
   },
   "devDependencies": {
     "mocha": "^6.0.2",
+    "parcel": "^2.0.0-alpha.2.1",
     "request": "^2.88.0"
   },
   "scripts": {
-    "test": "mocha"
-  },
-  "main": "src/linebreaker",
-  "browserify": {
-    "transform": [
-      "brfs"
-    ]
+    "test": "mocha",
+    "prepublishOnly": "parcel build . --no-minify"
   }
 }
