--- a/package.json
+++ b/package.json
@@ -2,6 +2,14 @@
   "name": "linebreak",
   "version": "1.0.2",
   "description": "An implementation of the Unicode Line Breaking Algorithm (UAX #14)",
+  "source": "src/linebreaker.js",
+  "type": "module",
+  "main": "dist/main.cjs",
+  "module": "dist/module.mjs",
+  "exports": {
+    "require": "./dist/main.cjs",
+    "import": "./dist/module.mjs"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/devongovett/linebreaker.git"
@@ -18,21 +26,29 @@
   },
   "homepage": "https://github.com/devongovett/linebreaker",
   "dependencies": {
-    "base64-js": "1.3.1",
-    "brfs": "^2.0.2",
+    "base64-js": "0.0.8",
     "unicode-trie": "^2.0.0"
   },
   "devDependencies": {
-    "mocha": "^7.0.1",
+    "mocha": "^10.0.0",
+    "parcel": "^2.5.0",
     "request": "^2.88.0"
   },
   "scripts": {
-    "test": "mocha --reporter landing"
+    "test": "parcel build && mocha --reporter landing",
+    "build": "parcel build",
+    "prepublishOnly": "parcel build"
   },
-  "main": "src/linebreaker",
-  "browserify": {
-    "transform": [
-      "brfs"
-    ]
+  "targets": {
+    "main": {
+      "includeNodeModules": [
+        "fs"
+      ]
+    },
+    "module": {
+      "includeNodeModules": [
+        "fs"
+      ]
+    }
   }
 }
