--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "require": "./dist/main.cjs",
     "import": "./dist/module.mjs"
   },
+  "files": [
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/devongovett/linebreaker.git"
