--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "main": "dist/main.cjs",
   "module": "dist/module.mjs",
   "exports": {
-    "require": "./dist/main.cjs",
-    "import": "./dist/module.mjs"
+    "import": "./dist/module.mjs",
+    "require": "./dist/main.cjs"
   },
   "files": [
     "dist"
